--- a/Index.html
+++ b/Index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Weather(Siyamthanda)</title>
+        <title>WeatherWithSiya</title>
         <link rel="stylesheet" href="style.css">
     </head>
 
@@ -13,10 +13,20 @@
             <input type="text" id="search" placeholder="Search By Location" autocomplete="off">
         </form>
         <main id="main">
+  <div class="weather-animation">
+    <div class="sun"></div>
+    <div class="clouds">
+      <div class="cloud"></div>
+      <div class="cloud"></div>
+    </div>
+    <div class="rain"></div>
+    <div class="snow"></div>
+  </div>
+</main>
 
-        </main>
         
         <script src="weather.js"></script>
     </body>
+
 
 </html>
