--- a/Index.html
+++ b/Index.html
@@ -6,6 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>WeatherWithSiya</title>
         <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/weather-icons/2.0.10/css/weather-icons.min.css">
     </head>
 
     <body>
@@ -14,13 +15,18 @@
         </form>
         <main id="main">
   <div class="weather-animation">
-    <div class="sun"></div>
-    <div class="clouds">
-      <div class="cloud"></div>
-      <div class="cloud"></div>
-    </div>
-    <div class="rain"></div>
-    <div class="snow"></div>
+    <div class="sun"><i class="wi wi-day-sunny"></i></div>
+<div class="clouds">
+  <i class="wi wi-cloud"></i>
+  <i class="wi wi-cloudy"></i>
+</div>
+<div class="rain">
+  <i class="wi wi-rain"></i>
+</div>
+<div class="snow">
+  <i class="wi wi-snow"></i>
+</div>
+
   </div>
 </main>
 
@@ -30,3 +36,4 @@
 
 
 </html>
+
