--- a/Index.html
+++ b/Index.html
@@ -15,17 +15,21 @@
         </form>
         <main id="main">
   <div class="weather-animation">
-    <div class="sun"><i class="wi wi-day-sunny"></i></div>
-<div class="clouds">
-  <i class="wi wi-cloud"></i>
-  <i class="wi wi-cloudy"></i>
+    <div class="sun">
+  <img src="icons/sun.svg" alt="Sun" class="sun" />
+  <div class="clouds">
+    <img src="icons/cloudy.svg" alt="Cloud" class="cloud" />
+    <img src="icons/clear.svg" alt="Cloud" class="cloud" />
+  </div>
+  <div class="rain">
+    <img src="icons/rain.svg" alt="Rain" class="drop" />
+    <img src="icons/thunderstorm.svg" alt="Rain" class="drop" />
+    <img src="icons/overcast.svg" alt="Rain" class="drop" />
+  </div>
+  <img src="icons/snow.svg" alt="Snow" class="snow" />
+  <img src="icons/snowman.svg" alt="Snow" class="snow" />
 </div>
-<div class="rain">
-  <i class="wi wi-rain"></i>
-</div>
-<div class="snow">
-  <i class="wi wi-snow"></i>
-</div>
+
 
   </div>
 </main>
@@ -36,4 +40,5 @@
 
 
 </html>
+
 
