--- a/Index.html
+++ b/Index.html
@@ -13,26 +13,27 @@
         <form id="form">
             <input type="text" id="search" placeholder="Search By Location" autocomplete="off">
         </form>
-        <main id="main">
+       <main id="main">
   <div class="weather-animation">
     <div class="sun">
-  <img src="icons/sun.svg" alt="Sun" class="sun" />
-  <div class="clouds">
-    <img src="icons/cloudy.svg" alt="Cloud" class="cloud" />
-    <img src="icons/clear.svg" alt="Cloud" class="cloud" />
-  </div>
-  <div class="rain">
-    <img src="icons/rain.svg" alt="Rain" class="drop" />
-    <img src="icons/thunderstorm.svg" alt="Rain" class="drop" />
-    <img src="icons/overcast.svg" alt="Rain" class="drop" />
-  </div>
-  <img src="icons/snow.svg" alt="Snow" class="snow" />
-  <img src="icons/snowman.svg" alt="Snow" class="snow" />
-</div>
-
-
+      <img src="icons/sun.svg" alt="Sun" />
+    </div>
+    <div class="clouds">
+      <img src="icons/cloudy.svg" alt="Cloud" class="cloud" />
+      <img src="icons/clear.svg" alt="Cloud" class="cloud" />
+    </div>
+    <div class="rain">
+      <img src="icons/rain.svg" alt="Rain" class="drop" />
+      <img src="icons/thunderstorm.svg" alt="Rain" class="drop" />
+      <img src="icons/overcast.svg" alt="Rain" class="drop" />
+    </div>
+    <div class="snow">
+      <img src="icons/snow.svg" alt="Snow" />
+      <img src="icons/snowman.svg" alt="Snow" />
+    </div>
   </div>
 </main>
+
 
         
         <script src="weather.js"></script>
@@ -40,5 +41,6 @@
 
 
 </html>
+
 
 
