--- a/Index.html
+++ b/Index.html
@@ -20,12 +20,18 @@
     </div>
     <div class="clouds">
       <img src="icons/cloudy.svg" alt="Cloud" class="cloud" />
+    </div>
+    <div class="clear">
       <img src="icons/clear.svg" alt="Cloud" class="cloud" />
     </div>
     <div class="rain">
       <img src="icons/rain.svg" alt="Rain" class="drop" />
-      <img src="icons/thunderstorm.svg" alt="Rain" class="drop" />
-      <img src="icons/overcast.svg" alt="Rain" class="drop" />
+    </div>
+    <div class="thunderstorm">
+      <img src="icons/thunderstorm.svg" alt="Thunderstorm" class="cloud" />
+    </div>
+    <div class="partially cloudy">
+      <img src="icons/overcast.svg" alt="Partially Cloudy" class="cloud" />
     </div>
     <div class="snow">
       <img src="icons/snow.svg" alt="Snow" />
@@ -41,6 +47,7 @@
 
 
 </html>
+
 
 
 
