--- a/Index.html
+++ b/Index.html
@@ -30,7 +30,7 @@
     <div class="thunderstorm">
       <img src="icons/thunderstorm.svg" alt="Thunderstorm" class="cloud" />
     </div>
-    <div class="partially cloudy">
+    <div class="partially-cloudy">
       <img src="icons/overcast.svg" alt="Partially Cloudy" class="cloud" />
     </div>
     <div class="snow">
@@ -47,6 +47,7 @@
 
 
 </html>
+
 
 
 
