--- a/Index.html
+++ b/Index.html
@@ -19,7 +19,7 @@
       <img src="icons/sun.svg" alt="Sun" />
     </div>
     <div class="clouds">
-      <img src="icons/cloudy.svg" alt="Cloud" class="cloud" />
+      <img src="icons/cloudy.jpg" alt="Cloud" class="cloud" />
     </div>
     <div class="clear">
       <img src="icons/cloudy.svg" alt="Cloud" class="cloud" />
@@ -47,6 +47,7 @@
 
 
 </html>
+
 
 
 
