--- a/Index.html
+++ b/Index.html
@@ -59,26 +59,26 @@
             <main id="main">
                 <div class="weather-animation">
                     <div class="sun">
-                        <img src="icons/sun.svg" alt="Sun" />
+                        <img src="#" alt="Sun" />
                     </div>
                     <div class="clouds">
-                        <img src="icons/cloudy.png" alt="Cloud" class="cloud" />
+                        <img src="#" alt="Cloud" class="cloud" />
                     </div>
                     <div class="clear">
-                        <img src="icons/cloudy.svg" alt="Cloud" class="cloud" />
+                        <img src="#" alt="Cloud" class="cloud" />
                     </div>
                     <div class="rain">
-                        <img src="icons/overcast.svg" alt="Rain" class="drop" />
+                        <img src="#" alt="Rain" class="drop" />
                     </div>
                     <div class="thunderstorm">
-                        <img src="icons/thunderstorm.svg" alt="Thunderstorm" class="cloud" />
+                        <img src="#" alt="Thunderstorm" class="cloud" />
                     </div>
                     <div class="partially-cloudy">
-                        <img src="icons/clear.svg" alt="Partially Cloudy" class="cloud" />
+                        <img src="#" alt="Partially Cloudy" class="cloud" />
                     </div>
                     <div class="snow">
-                        <img src="icons/snow.svg" alt="Snow" />
-                        <img src="icons/snowman.svg" alt="Snow" />
+                        <img src="#" alt="Snow" />
+                        <img src="#" alt="Snow" />
                     </div>
                 </div>
             </main>
@@ -91,4 +91,5 @@
         <script src="weather.js"></script>
     </body>
 </html>
+
 
