--- a/Index.html
+++ b/Index.html
@@ -55,6 +55,28 @@
                     </div>
                 </div>
             </div>
+
+           <div class="weather-animation">
+    <div class="sun">
+        <img src="icons/sun.png" alt="Sun">
+    </div>
+    <div class="clouds">
+        <img src="icons/cloud.png" alt="Cloud">
+        <img src="icons/cloud.png" alt="Cloud">
+    </div>
+    <div class="rain"></div>
+    <div class="snow"></div>
+    <div class="clear">
+        <img src="icons/sun.png" alt="Clear">
+    </div>
+    <div class="thunderstorm">
+        <img src="icons/thunder.png" alt="Thunderstorm">
+    </div>
+    <div class="partially-cloudy">
+        <img src="icons/cloud.png" alt="Partially Cloudy">
+    </div>
+</div>
+ 
             
             <div class="location-btn">
                 <button id="current-location"><i class="fas fa-location-arrow"></i> Use Current Location</button>
@@ -64,6 +86,7 @@
         <script src="weather.js"></script>
     </body>
 </html>
+
 
 
 
