--- a/Index.html
+++ b/Index.html
@@ -58,23 +58,15 @@
 
            <div class="weather-animation">
     <div class="sun">
-        <img src="icons/sun.png" alt="Sun">
-    </div>
-    <div class="clouds">
-        <img src="icons/cloud.png" alt="Cloud">
-        <img src="icons/cloud.png" alt="Cloud">
-    </div>
-    <div class="rain"></div>
-    <div class="snow"></div>
-    <div class="clear">
-        <img src="icons/sun.png" alt="Clear">
-    </div>
-    <div class="thunderstorm">
-        <img src="icons/thunder.png" alt="Thunderstorm">
-    </div>
-    <div class="partially-cloudy">
-        <img src="icons/cloud.png" alt="Partially Cloudy">
-    </div>
+    <i class="fas fa-sun"></i>
+</div>
+<div class="clouds">
+    <i class="fas fa-cloud"></i>
+    <i class="fas fa-cloud"></i>
+</div>
+<div class="thunderstorm">
+    <i class="fas fa-bolt"></i>
+</div>
 </div>
  
             
@@ -86,6 +78,7 @@
         <script src="weather.js"></script>
     </body>
 </html>
+
 
 
 
